crates/typesec-core/tests/ui/coerce_requires_implies.rs
use typesec_core::{resource::GenericResource, CanRead, CanWrite, Capability};

fn escalate(cap: Capability<CanRead, GenericResource>) -> Capability<CanWrite, GenericResource> {
    cap.coerce()
}

fn main() {}
